--- a/django_project/requirements.txt
+++ b/django_project/requirements.txt
@@ -1,6 +1,7 @@
 anyio==3.3.1
 appnope==0.1.2
 argon2-cffi==21.1.0
+asgiref==3.4.1
 attrs==21.2.0
 Babel==2.9.1
 backcall==0.2.0
@@ -12,7 +13,11 @@ cycler==0.10.0
 debugpy==1.4.3
 decorator==5.0.9
 defusedxml==0.7.1
+dj-database-url==0.5.0
+Django==3.2.9
+django-heroku==0.0.0
 entrypoints==0.3
+gunicorn==20.1.0
 idna==3.2
 ipykernel==6.4.0
 ipython==7.27.0
@@ -64,6 +69,7 @@ scipy==1.7.2
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.2.0
+sqlparse==0.4.2
 terminado==0.12.1
 testpath==0.5.0
 threadpoolctl==3.0.0
@@ -73,3 +79,4 @@ urllib3==1.26.6
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.2.1
+whitenoise==5.3.0
