--- a/django_project/requirements.txt
+++ b/django_project/requirements.txt
@@ -1,82 +1,109 @@
-anyio==3.3.1
-appnope==0.1.2
-argon2-cffi==21.1.0
-asgiref==3.4.1
-attrs==21.2.0
-Babel==2.9.1
+anyio==2.2.0
+argon2-cffi==20.1.0
+asgiref==3.3.1
+astroid==2.4.2
+async-generator==1.10
+atomicwrites==1.4.0
+attrs==20.3.0
+autopep8==1.5.5
+aws-encryption-sdk==3.1.0
+Babel==2.9.0
 backcall==0.2.0
-bleach==4.1.0
-certifi==2021.5.30
-cffi==1.14.6
-charset-normalizer==2.0.4
-cycler==0.10.0
-debugpy==1.4.3
-decorator==5.0.9
+bleach==3.3.0
+boto3==1.19.5
+botocore==1.22.5
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+colorama==0.4.4
+cryptography==36.0.0
+Cython==0.29.22
+decorator==5.0.6
 defusedxml==0.7.1
 dj-database-url==0.5.0
-Django==3.2.9
-django-heroku==0.0.0
+Django==3.1.6
+django-crispy-forms==1.11.0
+django-heroku==0.3.1
+django-storages==1.12.2
 entrypoints==0.3
+flake8==3.8.4
+graphviz==0.16
 gunicorn==20.1.0
-idna==3.2
-ipykernel==6.4.0
-ipython==7.27.0
+idna==2.10
+iniconfig==1.1.1
+ipykernel==5.5.3
+ipython==7.22.0
 ipython-genutils==0.2.0
-jedi==0.18.0
-Jinja2==3.0.1
-joblib==1.1.0
-json5==0.9.6
+isort==5.7.0
+jedi==0.17.2
+Jinja2==2.11.3
+jmespath==0.10.0
+json5==0.9.5
 jsonschema==3.2.0
-jupyter-client==7.0.2
+jupyter-client==6.1.12
 jupyter-core==4.7.1
-jupyter-server==1.11.0
-jupyterlab==3.1.11
+jupyter-packaging==0.7.12
+jupyter-server==1.6.0
+jupyterlab==3.0.13
 jupyterlab-pygments==0.1.2
-jupyterlab-server==2.8.1
-kiwisolver==1.3.2
-MarkupSafe==2.0.1
-matplotlib==3.4.3
-matplotlib-inline==0.1.3
+jupyterlab-server==2.4.0
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
 mistune==0.8.4
-nbclassic==0.3.1
-nbclient==0.5.4
-nbconvert==6.1.0
+mysql-connector-python==8.0.24
+mysqlclient==2.0.3
+nbclassic==0.2.7
+nbclient==0.5.3
+nbconvert==6.0.7
 nbformat==5.1.3
 nest-asyncio==1.5.1
-notebook==6.4.3
-numpy==1.21.2
-packaging==21.0
-pandas==1.3.4
+notebook==6.3.0
+numpy==1.20.1
+packaging==20.9
 pandocfilters==1.4.3
-parso==0.8.2
-pexpect==4.8.0
+parso==0.7.1
 pickleshare==0.7.5
-Pillow==8.3.2
-prometheus-client==0.11.0
-prompt-toolkit==3.0.20
-ptyprocess==0.7.0
+pluggy==0.13.1
+prometheus-client==0.10.1
+prompt-toolkit==3.0.18
+psycopg2==2.8.6
+py==1.10.0
+pycodestyle==2.6.0
 pycparser==2.20
-Pygments==2.10.0
+pycryptodome==3.11.0
+pydocstyle==5.1.1
+pyflakes==2.2.0
+pygame==2.0.1
+Pygments==2.8.1
+pylint==2.6.0
 pyparsing==2.4.7
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-pytz==2021.1
-pyzmq==22.2.1
-requests==2.26.0
-requests-unixsocket==0.2.0
-scikit-learn==1.0.1
-scipy==1.7.2
-Send2Trash==1.8.0
-six==1.16.0
+pyrsistent==0.17.3
+pytest==6.2.2
+python-dateutil==2.8.1
+python-jsonrpc-server==0.4.0
+python-language-server==0.36.2
+pywinpty==0.5.7
+PyYAML==5.4.1
+pyzmq==22.0.3
+requests==2.25.1
+rope==0.18.0
+s3-encryption-sdk==0.0.3
+s3transfer==0.5.0
+Send2Trash==1.5.0
+six==1.15.0
 sniffio==1.2.0
-sqlparse==0.4.2
-terminado==0.12.1
-testpath==0.5.0
-threadpoolctl==3.0.0
+snowballstemmer==2.1.0
+sqlparse==0.4.1
+terminado==0.9.4
+testpath==0.4.4
+toml==0.10.2
 tornado==6.1
-traitlets==5.1.0
-urllib3==1.26.6
+traitlets==5.0.5
+ujson==4.0.2
+urllib3==1.26.4
 wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client==1.2.1
-whitenoise==5.3.0
+whitenoise==5.2.0
+wrapt==1.12.1
+yapf==0.30.0
